Stop library sorting overflow dropdown context from overflowing.

--- a/css/context/dropdown.css
+++ b/css/context/dropdown.css
@@ -227,6 +227,7 @@
   font-size: var(--zehn-size-14) !important;
   font-weight: 400 !important;
   line-height: 32px !important;
+  min-width: 0 !important;
 }
 
 ._1ZpBQtDqcKBbfIIv01Vs1R ._1ZtpSq62fy_8W-_0pMn5cu:hover.DesktopUI, .DesktopUI ._1ZpBQtDqcKBbfIIv01Vs1R ._1ZtpSq62fy_8W-_0pMn5cu:hover {
